@@ -8,3 +8,13 @@ https://www.google.com
 [https://www.google.com Multiple word caption]
 
 [https://www.google.com '''Bold caption''']
+
+http://www.google.com/page_(page)
+
+(http://www.google.com/page)
+
+(http://www.google.com/page_(page))
+
+http://www.google.com/page_()
+
+(http://www.google.com/page_())
